# E-commerce-Chatbot

./: .env.example  .gitignore  README.md  app.py  config.py  faq.py  pyproject.toml  router.py  sqlite.py  webscrapping.py
data/: faq.csv
